--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -502,6 +502,10 @@ header section p {
     line-height: 40px;
 }
 
+.blogbox a:hover {
+    text-decoration: underline;
+}
+
 @media screen and (max-width: 430px) {
     .blogbox {
         display: flex;
@@ -555,6 +559,7 @@ header section p {
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .parallax article a:hover {
@@ -751,6 +756,7 @@ header section p {
     font-size: 14px;
     background-color: transparent;
     color: #FFF;
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .button button:hover {
