--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -563,7 +563,8 @@ header section p {
 }
 
 .parallax article a:hover {
-    color: #3A4F52;
+    color: #3a4f52a7;
+    mix-blend-mode: hard-light;
     background-color: #FFF;
 }
 
@@ -750,7 +751,7 @@ header section p {
 
 .button button {
     display: flex;
-    padding: 7px 13.38px 7px 12px;
+    padding: 11px 16.36px 11px 17px;
     border: 1px solid #FFF;
     font-family: "Helvetica Neue";
     font-size: 14px;
@@ -760,8 +761,9 @@ header section p {
 }
 
 .button button:hover {
+    color: #3a4f52a7;
+    mix-blend-mode: hard-light;
     background-color: #FFF;
-    color: #2B3E51;
 }
 
 ::placeholder {
@@ -797,7 +799,7 @@ header section p {
     }
     
     .button button {
-        padding: 7px 13.38px 7px 12px;
+        padding: 11px 16.36px 11px 17px;
         font-size: 20px;
     }
 
